--- a/Lesson-1/style.css
+++ b/Lesson-1/style.css
@@ -92,7 +92,6 @@
 
 .top__main {
   padding-bottom: 764px;
-  border: 1px solid #000;
   position: relative;
   display: flex;
 }
@@ -100,15 +99,11 @@
 .top__main__left {
   position: absolute;
   right: 560px;
-  border: 1px solid #000;
 }
 
-.top__main__right {
-  border: 1px solid #000;
-}
+
 
 .rectangle {
-  border: 1px solid #F16D7F;
   background-color: #F16D7F;
   width: 12px;
   padding-bottom: 92px;
@@ -118,7 +113,6 @@
 }
 
 .top__text {
-  border: 1px solid blue;
   position: absolute;
   top: 290px;
   left: 670px;
@@ -150,7 +144,6 @@ font-family: 'Lato', sans-serif;
 }
 
 .middle {
-  border: 1px solid blue;
   height: 533px;
   display: flex;
   justify-content: space-between;
@@ -160,7 +153,6 @@ font-family: 'Lato', sans-serif;
 .middle__block__1 {
   width: 360px;
   height: 260px;
-  border: 1px solid blue;
   margin-top: 65px;
   position: relative;
   
@@ -169,7 +161,6 @@ font-family: 'Lato', sans-serif;
 
 .middle__block__2 {
   width: 1140px;
-  border: 1px solid blue;
   height: 180px;
   margin-top: 25px;
   position: relative;
@@ -250,7 +241,6 @@ font-family: 'Lato', sans-serif;
 }
 
 .middle__text {
-  border: 1px solid red;
   width: 300px;
   margin-top: 100px;
   margin-left: auto;
@@ -383,17 +373,20 @@ font-family: 'Lato', sans-serif;
 .button_bottom {
   margin-left: auto;
   margin-right: auto;
-  width: 210px;
-  height: 50px;
-  border: 1px solid #000;
+  width: 212px;
+  height: 48px;
   margin-top: 48px;
   
 }
 
 .button_bottom_img {
-  background-image: url(../Lesson-1/img/Button_bottom.svg);
+  background-image: url(../Lesson-1/img/Button__Browse.svg);
   display: block;
   height: 100%;
+}
+
+.button_bottom_img:hover {
+  background-image: url(../Lesson-1/img/Button_bottom.svg);
 }
 
 .bottom__part {
@@ -410,8 +403,8 @@ margin-top: 95px;
 .bottom__main__part1 {
   width: 360px;
   height: 170px;
-  border: 1px solid red;
   margin-top: 103px;
+  position: relative;
   
 } 
 
@@ -441,4 +434,218 @@ margin-top: 95px;
   color: #FBFBFB;
   margin-top: 16px;
   text-align:  center;
+}
+
+.style__text_bottom__3 {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 19.96px;
+  line-height: 24px;
+  color: #FBFBFB;
+  margin-top: 23px;
+  position: absolute;
+  left: 105px;
+  
+
+}
+
+.style__text_bottom__4 {
+  width: 360px;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 13.972px;
+  line-height: 17px;
+  text-align: center;
+  color: #FBFBFB;
+  margin-top: 16px;
+  position: absolute;
+  top: 90px;
+  left: 1px;
+}
+
+.container__2 {
+  max-width: 1600px;
+  margin: 0 auto;
+  
+}
+
+.footer__background {
+  background-image: url(../Lesson-1/img/Footer.svg);
+  height: 450px;
+  background-repeat: no-repeat;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__block__left {
+  border: 1px solid red;
+  width: 360px;
+  height: 250px;
+  margin-top: 90px;
+}
+
+.footer__block__right {
+  border: 1px solid red;
+  width: 360px;
+  height: 250px;
+  margin-top: 150px;
+  margin-right: 110px;
+}
+
+.img_footer {
+  margin-left: 130px;
+}
+
+.text__footer {
+  width: 350px;
+  text-align: center;
+  margin-top: 35px;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  color: #222224;
+}
+
+.text__footer__2 {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 20px;
+    text-align: center;
+
+  color: #222224;
+}
+
+.text__footer__3 {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 50px;
+  text-align: center;
+  color: #222224;
+}
+
+.input {
+  height: 45px;
+  width: 240px;
+  border-radius: 15px 0px 0px 15px;
+  padding-left: 15px;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+}
+
+.footer_button {
+  background-image: url(../Lesson-1/img/footer_button.svg);
+  display: block;
+  height: 100%;
+  background-repeat: no-repeat;
+  width: 100px;
+  height: 50px;
+}
+
+.footer__placeholder {
+  display: flex;
+  margin-top: 20px;
+  position: relative;
+}
+
+.footer_button__3 {
+  background-image: url(../Lesson-1/img/Subscribe.svg);
+  display: block;
+  height: 100%;
+  background-repeat: no-repeat;
+  width: 85px;
+  height: 36px;
+  position: absolute;
+  top: 18px;
+  right: 1px;
+}
+
+.bottom_end {
+  background-color: #222224;
+  height: 79px;
+}
+
+.bottom__content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.bottom__content__left {
+  border: 1px solid red;
+  width: 330px;
+  height: 20px;
+  margin-top: 30px;
+}
+
+.bottom__content__text {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FBFBFB;
+
+}
+
+.bottom__content__right {
+  border: 1px solid red;
+  height: 32px;
+  width: 150px;
+  margin-top: 24px;
+  margin-right: 15px;
+  position: relative;
+}
+
+.facebook {
+  background-image: url(../Lesson-1/img/facebook.svg);
+  display: block;
+  width: 32px;
+  height: 32px;
+}
+
+.instagram {
+  background-image: url(../Lesson-1/img/inst.svg);
+  display: block;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  margin-left: 39px;
+  bottom: 0px;
+}
+
+.instagram:hover {
+background-image: url(../Lesson-1/img/inst__2.svg);
+}
+
+.P {
+  background-image: url(../Lesson-1/img/P.svg);
+  display: block;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  margin-left: 79px;
+  bottom: 0px;
+}
+
+.twitter {
+  background-image: url(../Lesson-1/img/twitt.svg);
+  display: block;
+  width: 32px;
+  height: 32px;
+  position: absolute;
+  margin-left: 119px;
+  bottom: 0px;  
 }
