--- a/Lesson-1/style.css
+++ b/Lesson-1/style.css
@@ -177,6 +177,7 @@ font-family: 'Lato', sans-serif;
   font-size: 16px;
   line-height: 19px;
   color: #FFFFFF;
+  text-decoration: none;
 }
 
 .text__inside__bottom {
@@ -190,6 +191,7 @@ font-family: 'Lato', sans-serif;
   font-size: 16px;
   line-height: 19px;
   color: #FFFFFF;
+  text-decoration: none;
 }
 
 .big__text {
