--- a/Lesson-1/style.css
+++ b/Lesson-1/style.css
@@ -45,7 +45,6 @@
   height: 100%;  
 }
 
-
 .block_1 {
   
   width: 26px;
@@ -64,6 +63,11 @@
   width: 32px;
   height: 23px;
   margin-left: 70px;
+  position: relative;
+}
+
+.block_3:hover .menu{
+  display: flex;
 }
 .block_4 {
  
@@ -90,11 +94,78 @@
   background: #F1E4E6;
 }
 
+.menu {
+  width: 187px;
+  padding-bottom: 100px;
+  position: absolute;
+  left: 170px;
+  top: 50px;
+  background-color: #FFFFFF;
+  flex-direction: column;
+ 
+
+}
+
+.menu__img {
+  background-image: url(../Lesson-1/img/h3.svg);
+  display: block;
+  height: 100%;
+  
+  
+}
+
+
+.menu__link {
+  display: block;
+  margin-top: 12px;
+  margin-left: 55px;
+  text-decoration: none;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #6F6E6E;
+}
+
+.menu__link:hover {
+  color: #F16D7F;
+}
+
+
+.menu__text {
+  margin-left: 34px;
+  margin-top: 37px;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+}
+
+
+
+.menu__main {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #F16D7F;
+  margin-top: 24px;
+  margin-left: 34px;
+  
+
+  
+}
+
 .top__main {
   padding-bottom: 764px;
   position: relative;
   display: flex;
 }
+
 
 .top__main__left {
   position: absolute;
@@ -326,6 +397,48 @@ font-family: 'Lato', sans-serif;
 
 .button__card__6 {
   background-image: url(../Lesson-1/img/img6.svg);
+  background-repeat: no-repeat;
+  display: block;
+  height: 100%;
+}
+
+.button__card__7 {
+  background-image: url(../Lesson-1/img/img7.svg);
+  background-repeat: no-repeat;
+  display: block;
+  height: 100%;
+}
+
+.button__card__8 {
+  background-image: url(../Lesson-1/img/img8.svg);
+  background-repeat: no-repeat;
+  display: block;
+  height: 100%;
+}
+
+.button__card__9 {
+  background-image: url(../Lesson-1/img/img9.svg);
+  background-repeat: no-repeat;
+  display: block;
+  height: 100%;
+}
+
+.button__card__10 {
+  background-image: url(../Lesson-1/img/img10.svg);
+  background-repeat: no-repeat;
+  display: block;
+  height: 100%;
+}
+
+.button__card__11 {
+  background-image: url(../Lesson-1/img/img11.svg);
+  background-repeat: no-repeat;
+  display: block;
+  height: 100%;
+}
+
+.button__card__12 {
+  background-image: url(../Lesson-1/img/img12.svg);
   background-repeat: no-repeat;
   display: block;
   height: 100%;
@@ -646,4 +759,100 @@ background-image: url(../Lesson-1/img/inst__2.svg);
   position: absolute;
   margin-left: 119px;
   bottom: 0px;  
+}
+
+.top__catalog__background {
+  background-color: #F8F3F4;
+  height: 148px;
+}
+
+.top__catalog {
+  display: flex;
+  justify-content: space-between;
+}
+
+.top__catalog__left {
+  width: 194px;
+  border: 1px solid red;
+  margin-top: 60px;
+}
+
+.top__catalog__right {
+  border: 1px solid red;
+  width: 209px;
+  padding-bottom: 17px;
+  margin-top: 65px;
+}
+
+.top__catalog__text {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 29px;
+  color: #F16D7F;
+
+}
+
+.top__catalog__text__right {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #636363;
+}
+
+.top__catalog__text__right__2 {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 17px;
+  color: #F16D7F;
+}
+
+.main__page__left {
+  margin-top: 51px;
+  margin-left: 15px;
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  color: #000000;
+  display: flex;
+  
+}
+
+.main__page__right{
+  margin-left: 280px;
+  display: flex;
+  margin-top: 51px;
+}
+
+.page__1 {
+  font-family: 'Lato', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #6F6E6E;
+  margin-left: 48px;
+  
+
+}
+
+.main__page {
+  display: flex;
+}
+
+.pages {
+  width: 283px;
+  height: 43px;
+  border: 1px solid #000;
+  margin-top: 49px;
+  justify-content: center;
+  margin-left: 415px;
+  margin-bottom: 97px;
 }
